@@ -62,6 +62,10 @@ can be used to deactivate new features for compatibility reasons.
 	using the fallback sequence. This is useful e.g. for combining
 	characters from a regular and an expert font.
 
+.kern [0|1]						troff only
+	Disables (0) or enables pairwise kerning. The default is enabled
+	with the -x option, and otherwise disabled.
+
 .lc_ctype localename
 	sets the LC_CTYPE locale setting to localename. The default is
 	the value of the LC_CTYPE environment variable. This request is
@@ -127,4 +131,4 @@ any character in the current LC_CTYPE locale
 	sequence occurs. This is sometimes useful to ensure that
 	following "\X'PS: ...'" commands work as expected.
 
-                                                                8/23/05
+                                                                8/25/05
